--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Navigations -->
 	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 		<div class="container-fluid">
-			<a href="navbar-brand" href="#"><img src="img/logo1.png"></a>
+			<a href="navbar-brand" href="#"><img src="img/logo.png" id="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -50,14 +50,61 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="img2.jpg">
+				<img src="img/img2.jpg">
 			</div>
 			<div class="carousel-item">
-				<img src="img3.jpg">
+				<img src="img/img3.jpg">
 			</div>
 		</div>
 	</div>
-	<!-- Three Column Section 1 -->
+
+	<!-- Four Column Section 1 -->
+	<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+            <div class="card h-100">
+                <img class="card-img-top img-fluid" src="img/img4.png" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer with more text.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+            <div class="card h-100">
+                <img class="card-img-top img-fluid" src="//placehold.it/500x280" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">This is a longer card with supporting text. This content is a little bit shorted.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+            <div class="card h-100">
+                <img class="card-img-top img-fluid" src="//placehold.it/500x280" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer with more text. </p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+         <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+            <div class="card h-100">
+                <img class="card-img-top img-fluid" src="//placehold.it/500x280" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">This is a longer card with supporting text below as a natural content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+         
+    </div>
+
+</div>
 
 	<!-- Three Quotes Section -->
 
