--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Navigations -->
 	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 		<div class="container-fluid">
-			<a href="navbar-brand" href="#"><img src="img/logo.png" id="logo"></a>
+			<a href="navbar-brand" href="index.html"><img src="img/logo.png" id="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -34,15 +34,15 @@
 
 	<!-- Image Slider -->
 	<div id="slides" class="carousel slide" data-ride="carousel">
-		<ul class="carousel-indicators">
+		<ol class="carousel-indicators">
 			<li data-target="#slides" data-slide-to="0" class="active"></li>
 			<li data-target="#slides" data-slide-to="1"></li>
 			<li data-target="#slides" data-slide-to="2"></li>
-		</ul>
+		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="img/img1.jpg">
-				<div class="carousel-caption">
+				<img class="d-block w-100" src="img/img1.jpg">
+				<div class="carousel-caption d-none d-md-block">
 					<h1 class="display-2">Buddhist</h1>
 					<h3>Free Template For Charities</h3>
 					<button type="button" class="btn btn-outline-light btn-lg"> Learn More</button>
@@ -50,60 +50,83 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="img/img2.jpg">
+				<img class="d-block w-100" src="img/img2.jpg">
+				<div class="carousel-caption d-none d-md-block">
+					<h1 class="display-2">Pure Lotus</h1>
+					<h3>Free Template For Charities</h3>
+					<button type="button" class="btn btn-outline-light btn-lg"> Learn More</button>
+					<button type="button" class="btn btn-primary btn-lg">Contact Us</button>
+				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="img/img3.jpg">
+				<img class="d-block w-100" src="img/img3.jpg">
+				<div class="carousel-caption d-none d-md-block">
+					<h1 class="display-2">Its free</h1>
+					<h3>Free Template For Charities</h3>
+					<button type="button" class="btn btn-outline-light btn-lg"> Learn More</button>
+					<button type="button" class="btn btn-primary btn-lg">Contact Us</button>
+				</div>
 			</div>
 		</div>
 	</div>
-
 	<!-- Four Column Section 1 -->
-	<div class="container">
+	<div id="wrapper">
+	<div class="container" id="first-cont">
+		<div id="header-area">
+			<img src="img/logo.png" class="small-logo">
+			<h2>What We Offer</h2>
+			<br>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<br>
     <div class="row">
-        <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+        <div class="col-md-6 col-lg-4 col-xl-3 py-2" id="c1">
             <div class="card h-100">
-                <img class="card-img-top img-fluid" src="img/img4.png" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="img/img5.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer with more text.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h4 class="card-title">Lorem Ipsum</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <a href="#" type="button" class="btn btn-primary" id="b1"> Explorer</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+        <div class="col-md-6 col-lg-4 col-xl-3 py-2" id="c2">
             <div class="card h-100">
-                <img class="card-img-top img-fluid" src="//placehold.it/500x280" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="img/img6.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">This is a longer card with supporting text. This content is a little bit shorted.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h4 class="card-title">Lorem Ipsum</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <a href="#" type="button" class="btn btn-primary" id="b2"> Explorer</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+        <div class="col-md-6 col-lg-4 col-xl-3 py-2" id="c3">
             <div class="card h-100">
-                <img class="card-img-top img-fluid" src="//placehold.it/500x280" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="img/img7.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer with more text. </p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h4 class="card-title">Lorem Ipsum</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <a href="#" type="button" class="btn btn-primary" id="b3"> Explorer</a>
                 </div>
             </div>
         </div>
-         <div class="col-md-6 col-lg-4 col-xl-3 py-2">
+         <div class="col-md-6 col-lg-4 col-xl-3 py-2" id="c4">
             <div class="card h-100">
-                <img class="card-img-top img-fluid" src="//placehold.it/500x280" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="img/img8.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">This is a longer card with supporting text below as a natural content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h4 class="card-title">Lorem Ipsum</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <a href="#" type="button" class="btn btn-primary" id="b4"> Explorer</a>
                 </div>
             </div>
         </div>
-         
     </div>
-
+</div>
 </div>
 
 	<!-- Three Quotes Section -->
