--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<!-- Navigations -->
-	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+	<nav class="navbar navbar-expand-md navbar-light bg-custom sticky-top">
 		<div class="container-fluid">
 			<a href="navbar-brand" href="index.html"><img src="img/logo.png" id="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
