--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<li data-target="#slides" data-slide-to="1"></li>
 			<li data-target="#slides" data-slide-to="2"></li>
 		</ol>
-		<div class="carousel-inner">
+		<div class="carousel-inner" role="listbox">
 			<div class="carousel-item active">
 				<img class="d-block w-100" src="img/img1.jpg">
 				<div class="carousel-caption d-none d-md-block">
@@ -128,8 +128,6 @@
     </div>
 </div>
 </div>
-
-	<!-- Three Quotes Section -->
 
 	<!-- Two Column Sectin -->
 
