--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="carousel-item">
 				<img class="d-block w-100" src="img/img3.jpg">
 				<div class="carousel-caption d-none d-md-block">
-					<h1 class="display-2">Its free</h1>
+					<h1 class="display-2">It's free</h1>
 					<h3>Free Template For Charities</h3>
 					<button type="button" class="btn btn-outline-light btn-lg"> Learn More</button>
 					<button type="button" class="btn btn-primary btn-lg">Contact Us</button>
@@ -132,7 +132,24 @@
 </div>
 
 	<!-- Two Column Sectin -->
-
+	<div class="container-fluid padding" id="div-two">
+		<div class="row padding" id="div-two-main">
+			<div class="col-lg-6" id="div-two-sub">
+				<div>
+					<img src="img/logo.png" class="small-logo">
+				</div>
+				<h2>Everyone Welcome</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<a href="#" type="button" class="btn btn-primary"> Learn More </a>
+			</div>
+			<div class="col-lg-6" id="img-div">
+				<img src="https://cdn.pixabay.com/photo/2017/09/05/12/31/meditation-2717462_1280.jpg" class="image-fluid" id="img2">
+			</div>
+		</div>
+	</div>
 	<!-- Three Column Section 2 -->
 
 	<!-- Beginners Class Section -->
