--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</nav>
 
 	<!-- Image Slider -->
-	<div id="slides" class="carousel slide" data-ride="carousel">
+	<div id="slides" class="carousel slide carousel-fade" data-ride="carousel">
 		<ol class="carousel-indicators">
 			<li data-target="#slides" data-slide-to="0" class="active"></li>
 			<li data-target="#slides" data-slide-to="1"></li>
@@ -68,7 +68,15 @@
 					<button type="button" class="btn btn-outline-light btn-lg"> Learn More</button>
 					<button type="button" class="btn btn-primary btn-lg">Contact Us</button>
 				</div>
-			</div>
+   			</div>
+   			<a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+   				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    	<span class="sr-only">Previous</span>
+		    </a>
+		    <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+		     	<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		     	<span class="sr-only">Next</span>
+		    </a>
 		</div>
 	</div>
 	<!-- Four Column Section 1 -->
