--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<link rel="shortcut icon" type="image/png" href="img/fav.png"/>
 	<link rel="shortcut icon" type="image/png" href="img/fav.png"/>
@@ -161,12 +162,83 @@
 		</div>
 	</div>
 	
-	<!-- Three Column Section 2 -->
+	<!-- Six Cards -->
+	<div class="container">
+		<div class="row" id="desc-dev">
+			<div id="desc">
+			<h2>Mollit Anim Id Est Laborum</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div class="col-xl-4 col-lg-6 col-md-12 py-2 card cardcommon" >
+				<i class="fas fa-hand-holding-heart"></span></i>
+				<h4>Onsectetur adipisicing </h4>
+				<p>Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<a href="#" type="btn btn-outline-light">Read more</a>
+			</div>
+			<div class="col-xl-4 col-lg-6 col-md-12 py-2 card cardcommon">
+				<h4>Elit, sed do eiusmod</h4>
+				<p>Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<a href="#" type="btn btn-outline-light">Read more</a>
+			</div>
+			<div class="col-xl-4 col-lg-6 col-md-12 py-2 card cardcommon">
+				<h4>Tempor incididunt </h4>
+				<p>Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<a href="#" type="btn btn-outline-light">Read more</a>
+			</div>
 
-	<!-- Beginners Class Section -->
+			<div class="col-xl-4 col-lg-6 col-md-12 py-2 card cardcommon">
+				<h4>Duis aute irure</h4>
+				<p>Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<a href="#" type="btn btn-outline-light">Read more</a>
+			</div>
+			<div class="col-xl-4 col-lg-6 col-md-12 py-2 card cardcommon">
+				<h4>Excepteur sint </h4>
+				<p>Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<a href="#" type="btn btn-outline-light">Read more</a>
+			</div>
+			<div class="col-xl-4 col-lg-6 col-md-12 py-2 card cardcommon">
+				<h4>Dolor in reprehenderit</h4>
+				<p>Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<a href="#" type="btn btn-outline-light">Read more</a>
+			</div>
+		</div>
+	</div>
+	<hr>
+	<!-- Simple Div -->
+
+	<div class="container-n">
+		<div class="image-fluid" id="pic-div">
+			<img src="img/logo.png" class="small-logo" id="imggo">
+			<h2>Lorem ipsum dolor sit amet</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#" type="button" class="btn btn-primary" id="btngo">Go Somewhere</a>
+		</div>
+	</div>
 
 	<!-- Footer -->
-			
+	
 <!-- Javascripts -->
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
