--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 	<!-- Navigations -->
+
 	<nav class="navbar navbar-expand-md navbar-light bg-custom sticky-top">
 		<div class="container-fluid">
 			<a href="navbar-brand" href="index.html"><img src="img/logo.png" id="logo"></a>
@@ -25,17 +26,18 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link" href="">Home</a> </li>
-					<li class="nav-item"><a class="nav-link" href="">About</a> </li>
-					<li class="nav-item"><a class="nav-link" href="">Projects</a> </li>
-					<li class="nav-item"><a class="nav-link" href="">Team</a> </li>
-					<li class="nav-item"><a class="nav-link" href="">Donate</a> </li>
+					<li class="nav-item"><a class="nav-link" href="#slides">Home</a> </li>
+					<li class="nav-item"><a class="nav-link" href="#first-cont">About</a> </li>
+					<li class="nav-item"><a class="nav-link" href="#desc-dev">Projects</a> </li>
+					<li class="nav-item"><a class="nav-link" href="#teamt">Team</a> </li>
+					<li class="nav-item"><a class="nav-link" href="donatet">Donate</a> </li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
 	<!-- Image Slider -->
+
 	<div id="slides" class="carousel slide carousel-fade" data-ride="carousel">
 		<ol class="carousel-indicators">
 			<li data-target="#slides" data-slide-to="0" class="active"></li>
@@ -44,7 +46,7 @@
 		</ol>
 		<div class="carousel-inner" role="listbox">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="img/img1.jpg">
+				<img class="d-block w-100" src="img/img4.jpg">
 				<div class="carousel-caption d-none d-md-block">
 					<h1 class="display-2">Buddhist</h1>
 					<h3>Free Template For Charities</h3>
@@ -82,6 +84,7 @@
 	</div>
 
 	<!-- Four Column Section 1 -->
+
 	<div id="wrapper">
 	<div class="container" id="first-cont">
 		<div id="header-area">
@@ -163,10 +166,11 @@
 	</div>
 	
 	<!-- Six Cards -->
+
 	<div class="container">
 		<div class="row" id="desc-dev">
 			<div id="desc">
-			<h2>Mollit Anim Id Est Laborum</h2>
+			<h2>Our Projects</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -221,9 +225,10 @@
 		</div>
 	</div>
 	<hr>
+
 	<!-- Simple Div -->
 
-	<div class="container-n">
+	<div class="container-n" id="teamt">
 		<div class="image-fluid" id="pic-div">
 			<img src="img/logo.png" class="small-logo" id="imggo">
 			<h2>Lorem ipsum dolor sit amet</h2>
@@ -236,8 +241,56 @@
 			<a href="#" type="button" class="btn btn-primary" id="btngo">Go Somewhere</a>
 		</div>
 	</div>
+<hr>
+	<!-- Donations section -->
+
+	<div class="container-d" id="donatet">
+		<div class="row-d">
+			<div ><img src="img/logo.png" class="small-logo" id="imgdon" style="padding-bottom: 0px">
+			<h2>Donate For Our Latest Project</h2></div>
+			<br>
+			<div>
+					<img src="img/img12.png" id="img3d">
+			</div>
+			<p><br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br></p>
+			<br>
+			<div>
+			<div class="progress">
+	  		<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+			</div><br>
+			</div>
+		<p>Donations on this project 75% <span class="emoji hearts" role="img" aria-label="hearts"></span></p>
+		<a href="#" type="button" class="btn btn-primary" id="btndnt">Donate Now</a>
+	</div>
+
+	<!-- Newsletter -->
+
+	<section class="home-newsletter">
+	<div class="container">
+	<div class="row">
+	<div class="col-sm-12">
+		<div class="single">
+			<h2>Subscribe to our Newsletter</h2>
+		<div class="input-group">
+	         <input type="email" class="form-control" placeholder="Enter your email">
+	         <span class="input-group-btn">
+	         <button class="btn btn-theme" type="submit" id="sub">Subscribe</button>
+	         </span>
+	          </div>
+		</div>
+	</div>
+	</div>
+	</div>
+	</section>
 
 	<!-- Footer -->
+
+	
 	
 <!-- Javascripts -->
 
